# Singleton

./: CMakeLists.txt  readme.md
include/: allocation_strategy.hpp  core_singleton.hpp  disposal_strategy.hpp  sync_strategy.hpp
src/: demo.cpp
test/: singleton_test.cpp
